demo-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-app
  name: demo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - image: sreeharshav/rollingupdate:v5
        name: rollingupdate
        readinessProbe:
          initialDelaySeconds: 45
          periodSeconds: 5
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
        livenessProbe:
          initialDelaySeconds: 60
          periodSeconds: 5
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 1
          httpGet:
            path: /
            port: 80
