pod-priority-class.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: normal-deploy
  name: normal-deploy
spec:
  replicas: 20
  selector:
    matchLabels:
      app: normal-deploy
  template:
    metadata:
      labels:
        app: normal-deploy
    spec:
      containers:
      - image: nginx:latest
        name: nginx
