sample-job.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: mysql1
  name: mysql1
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mysql1
  template:
    metadata:
      labels:
        run: mysql1
    spec:
      containers:
      - image: mysql:latest
        name: mysql1
        volumeMounts:
          - name: mysql-volume
            mountPath: /var/lib/mysql
      volumes:
      - name: mysql-volume
        emptyDir: {}        
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: mysql1
  name: mysql1
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    run: mysql1
